--- a/src/assets/css/Botonwhatsapp.css
+++ b/src/assets/css/Botonwhatsapp.css
@@ -1,12 +1,11 @@
-
 .boton-flotante {
     position: fixed;
-    bottom: 4em; 
-    right: 1em; 
+    bottom: 4em;
+    right: 1em;
     width: 3em;
-    height: 3em; 
+    height: 3em;
     background-color: #FFFF;
-    background-image: url("../statics/whatsapp.png");
+    background-image: url("../statics/whatsapp.webp");
     background-size: cover;
     background-position: center;
     border-radius: 50%;
@@ -20,20 +19,21 @@
 
 
 /*TABLET*/
-@media only screen and (min-width: 768px) and (max-width: 1023px){
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
     .boton-flotante {
         bottom: 1em;
     }
 }
 
 /* ESCRITORIO */
-@media only screen and (min-width: 1024PX){
+@media only screen and (min-width: 1024PX) {
     .boton-flotante {
         bottom: 4em;
         right: 4em;
         width: 4em;
         height: 4em;
     }
+
     .boton-flotante:hover {
         width: 5em;
         height: 5em;
@@ -43,4 +43,3 @@
         cursor: pointer;
     }
 }
-
