--- a/src/assets/css/FotografiaHome.css
+++ b/src/assets/css/FotografiaHome.css
@@ -1,10 +1,8 @@
-@import '../css/Fonts.css';
-
 .fotografia {
     text-align: center;
     background-color: rgba(252, 176, 62, 0.65);
     max-width: 100%;
-    margin: 0 auto; 
+    margin: 0 auto;
     overflow: hidden;
     margin-top: 1.5em;
     color: white;
@@ -13,30 +11,46 @@
 .fotografia h2 {
     margin-top: 1em;
     margin-bottom: 1em;
-    font-size: 2.25em; 
-    white-space: nowrap; 
+    font-size: 2.25em;
+    white-space: nowrap;
     font-family: 'Mont-SemiBold';
     color: white;
 }
 
-.icono-fotografia{
+.icono-fotografia {
     margin-top: 1em;
     margin-bottom: 1em;
     max-width: 20%;
 }
 
-.blur-in-expand{animation:blur-in-expand 0.9s linear both} @keyframes blur-in-expand{0%{transform:scale(0);filter:blur(12px);opacity:0}100%{transform:scale(1);filter:blur(0);opacity:1}}
+.blur-in-expand {
+    animation: blur-in-expand 0.9s linear both
+}
+
+@keyframes blur-in-expand {
+    0% {
+        transform: scale(0);
+        filter: blur(12px);
+        opacity: 0
+    }
+
+    100% {
+        transform: scale(1);
+        filter: blur(0);
+        opacity: 1
+    }
+}
 
 /*TABLET*/
-@media only screen and (min-width: 768px) and (max-width: 1023px){
-    .icono-fotografia{
+@media only screen and (min-width: 768px) and (max-width: 1023px) {
+    .icono-fotografia {
         max-width: 12%;
     }
 }
 
 /* ESCRITORIO */
-@media only screen and (min-width: 1024PX){
-    .icono-fotografia{
+@media only screen and (min-width: 1024PX) {
+    .icono-fotografia {
         max-width: 15%;
     }
 }
