--- a/src/assets/css/video.css
+++ b/src/assets/css/video.css
@@ -3,3 +3,27 @@
     height: 20em;
     margin: 0px auto;
 }
+
+.video-container iframe,
+.video-thumbnail {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.video-preview {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.video-play-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 60px;
+    color: white;
+    pointer-events: none;
+}
